objects/FeedbackTypes__c.object
<CustomObject>
    <fields>
        <fullName>ActionableActionItems__c</fullName>
        <label>Action Items</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConceptName__c</fullName>
        <label>Concept Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomerSuggestionFeedback__c</fullName>
        <label>VOC Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FeedbackType__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market Feedback</fullName>
                </value>
                <value>
                    <fullName>New Concept</fullName>
                </value>
                <value>
                    <fullName>Price/Value</fullName>
                </value>
                <value>
                    <fullName>Usage Feedback</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Type__c</fullName>
        <label>Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market Feedback</fullName>
                </value>
                <value>
                    <fullName>New Concept</fullName>
                </value>
                <value>
                    <fullName>Price/Value</fullName>
                </value>
                <value>
                    <fullName>Usage Feedback</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductGroupName__c</fullName>
        <formula>ProductGroup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>FeedbackTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatusFinalComment__c</fullName>
        <label>Status/ Final Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VoiceofCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voice of Customer</label>
        <referenceTo>VoiceofCustomer__c</referenceTo>
        <relationshipName>Feedback_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feedback</label>
    <nameField>
        <displayFormat>Feedback-{0000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>